Added group members section & enchance design

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
           <div class="contact-form">
             <h3>Contact Information</h3>
             <form
-              action="https://formsubmit.co/mahmoudmustafa504@gmail.com"
+              action="https://formsubmit.co/email@gmail.com"
               method="POST"
             >
               <div class="top">
@@ -102,11 +102,7 @@
               <div class="general">
                 <div>
                   <i class="fa-solid fa-envelope"></i>
-                  <div>example@gmail.com</div>
-                </div>
-                <div>
-                  <i class="fa-solid fa-phone"></i>
-                  <div>+96212374893</div>
+                  <div>M.Abdel-Majeed@ju.edu.jo</div>
                 </div>
               </div>
             </form>
