--- a/index.html
+++ b/index.html
@@ -64,59 +64,7 @@
         </div>
       </section>
       <!-- === END HERO SECTION === -->
-      <!-- === START GROUP MEMBERS === -->
-      <!-- <section
-        class="section"
-        id="group-members"
-      >
-        <div class="container">
-          <h2 class="title">group members</h2>
-          <div class="choose-cards">
-            <div class="card">
-              <img
-                src="assets/Images/professors/Mohammad.jpg"
-                alt="tooth"
-              />
-              <div class="card-info">
-                <div>
-                  <h3>Dr. Mohammad Abdel-Majeed</h3>
-                  <h4>M.Abdel-Majeed@ju.edu.jo</h4>
-                  <p>
-                    Mohammad Abdel-Majeed is an Associate professor at the
-                    Computer Engineering Department at the University of Jordan
-                    (UJ) since June 2016. He earned his PhD from University of
-                    Southern California (USC) in 2016. Also, he earned his MS
-                    from USC in 2010 and his BS from University of Jordan in
-                    2007. His research focuses on the design of Artificial
-                    Intelligence based systems inthe healthcare and smart city
-                    domains. He has been serving as the head of the computer
-                    engineering department at UJ in the time period between
-                    December-2021 and September 2023.
-                    <br />
 
-                    He has been on the organizing committee/program committee
-                    and/or external reviewer for several local and international
-                    IEEE conferences like IPDPS 2019 and JEEIT 2019. Also he is
-                    an external reviewer for several outstanding IEEE journals
-                    like TLVLSI, TPDS, TCAS and IEEE transactions on
-                    reliability. In addition, he participated in judging several
-                    competitions for undergraduate students and elementary
-                    school students. He also has been part of multiple projects
-                    with European partners like DECAIR, Smart.Eco and
-                    Data-Literacy projects.
-                  </p>
-                </div>
-                <a
-                  href="https://scholar.google.com/citations?user=B7_ws9sAAAAJ&hl=en"
-                  target="_blank"
-                  >Google Scholar</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-      <!-- === END GROUP MEMBERS === -->
       <!-- === START OUR VISION === -->
       <section
         class="section"
@@ -248,6 +196,230 @@
         </div>
       </section>
       <!-- === END DENTAL VISION === -->
+
+      <!-- === START GROUP MEMBERS === -->
+      <section
+        class="section"
+        id="group-members"
+      >
+        <div class="container">
+          <h2 class="title">group members</h2>
+          <div class="choose-cards group-members-cards">
+            <div class="card">
+              <img
+                src="assets/Images/professors/Mohammad.jpg"
+                alt="tooth"
+              />
+              <div class="card-info">
+                <div class="card-text">
+                  <h3>Dr. Mohammad Abdel-Majeed (PI)</h3>
+                  <h4>M.Abdel-Majeed@ju.edu.jo</h4>
+                  <p id="short-text">
+                    Mohammad Abdel-Majeed is an Associate professor at the
+                    Computer Engineering Department at the University of Jordan
+                    (UJ) since June 2016. He earned his PhD from University of
+                    Southern California (USC) in 2016.
+                  </p>
+                  <p class="extra-text">
+                    Also, he earned his MS from USC in 2010 and his BS from
+                    University of Jordan in 2007. His research focuses on the
+                    design of Artificial Intelligence based systems inthe
+                    healthcare and smart city domains. He has been serving as
+                    the head of the computer engineering department at UJ in the
+                    time period between December-2021 and September 2023.
+                  </p>
+                  <span class="see_more">See More</span>
+                </div>
+                <a
+                  href="https://scholar.google.com/citations?user=B7_ws9sAAAAJ&hl=en"
+                  target="_blank"
+                  >Google Scholar</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assets/Images/professors/Gheith.jpg"
+                alt="tooth"
+              />
+              <div class="card-info">
+                <div class="card-text">
+                  <h3>Prof. Gheith Abandah (Co-PI)</h3>
+                  <h4>abandah@ju.edu.jo</h4>
+                  <p id="short-text">
+                    ​Holds PhD and MSE degrees in Computer Science and
+                    Engineering from the University of Michigan (1998 and 1995)
+                    and BSc degree in Electrical Engineering from the University
+                    of Jordan (1985).
+                  </p>
+                  <p class="extra-text">
+                    He is a professor of Computer Engineering in the University
+                    of Jordan and was the first president of Aqaba University of
+                    Technology. He is the general coordinator of Developing
+                    Curricula for Artificial Intelligence and Robotics (DeCAIR),
+                    which is a 3-year project funded by Erasmus+ Capacity
+                    Building in the field of Higher Education program. He has a
+                    25-year academic experience in teaching computer science and
+                    engineering topics and in conducting research related to
+                    artificial intelligence, Arabic language processing, machine
+                    learning, electronic voting, and parallel processing. He has
+                    66 publications, more than 1100 citations, and h-index of
+                    20. He has more than 15 years of industrial experience in
+                    localization, military electronics, and product and project
+                    development and deployment. Has held leading positions in
+                    the private sector including design engineer, project
+                    manager, development manager, VP development, and general
+                    manager where he successfully managed multiple technical
+                    teams to fulfill aggressive deadlines in the Middle East
+                    region. He is active volunteer and IEEE senior member,
+                    participated in establishing IEEE – Jordan Section, elected
+                    the IEEE – Jordan Section chair for three terms, and
+                    established the AEECT and JEEIT international conference
+                    series and many innovative activities.​​
+                  </p>
+                  <span class="see_more">See More</span>
+                </div>
+                <a
+                  href="https://scholar.google.com/citations?user=OJVXjmEAAAAJ"
+                  target="_blank"
+                  >Google Scholar</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assets/Images/professors/Abeer.jpg"
+                alt="tooth"
+              />
+              <div class="card-info">
+                <div class="card-text">
+                  <h3>Dr. Abeer Alhadidi (Co-PI)</h3>
+                  <h4>a_hadidi@ju.edu.jo</h4>
+                  <p id="short-text">
+                    Dr. AlHadidi is currently a Clinical Associate Professor and
+                    Director of Oral and Maxillofacial Radiology at NYU College
+                    of Dentistry. Dr. AlHadidi is also an Associate Professor of
+                    Oral and Maxillofacial Radiology at the School of Dentistry,
+                    The University of Jordan. She served as the head of the
+                    Department of Oral surgery, Oral medicine, Oral Pathology,
+                    and Periodontology and as an assistant dean for students’
+                    affairs at the School of Dentistry, The University of
+                    Jordan.
+                  </p>
+                  <p class="extra-text">
+                    Dr. AlHadidi received her DDS degree in 2004 from the
+                    University of Jordan and received her certificate and MS
+                    degree in Oral and maxillofacial radiology from the
+                    University of North Carolina at Chapel Hill in 2010. She got
+                    her PhD in 2014 from King’s college/University of London.
+                    She completed a fellowship in Oral and Maxillofacial
+                    radiology at UNC and is currently an Adjunct Assistant
+                    Professor there. In 2011 Dr. AlHadidi became a Diplomat of
+                    the American Board of Oral and Maxillofacial Radiology. She
+                    also got her Jordanian Board certification in the same
+                    specialty. Her research has focused on the use of 3D data
+                    and 3D image analysis in treatment planning, diagnosis, and
+                    follow up of complex dental patients. She is also involved
+                    in exploring AI in detection, quantification, and prediction
+                    of disease processes. Her PhD work was on the Use of 3D
+                    image analysis in the diagnosis and treatment planning of
+                    mandibular asymmetry.
+                  </p>
+                  <span class="see_more">See More</span>
+                </div>
+                <a
+                  href="https://scholar.google.com/citations?user=pguC8ZQAAAAJ&hl=en"
+                  target="_blank"
+                  >Google Scholar</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assets/Images/professors/iyad.jpeg"
+                alt="tooth"
+              />
+              <div class="card-info">
+                <div class="card-text">
+                  <h3>Prof.Iyad Jafar (Collaborator)</h3>
+                  <h4>iyad.jafar@ju.edu.jo</h4>
+                  <p id="short-text">
+                    ​Iyad Jafar received his Ph.D. degree in computer
+                    engineering from Wayne State University in 2008 and joined
+                    the Computer Engineering Department at The University of
+                    Jordan as an Assistant Professor in July 2008 and was
+                    promoted to Associate Professor and then to Professor in
+                    2013 and 2017, respectively.
+                  </p>
+                  <p class="extra-text">
+                    Since 2008, he has been engaged in the academic life as an
+                    instructor and researcher. His research areas are focused on
+                    digital image processing, computer vision, and computer
+                    networks. He has published several research papers in
+                    peer-reviewed journals and conferences.
+                  </p>
+                  <span class="see_more">See More</span>
+                </div>
+                <a
+                  href="https://scholar.google.com/citations?user=wmk0W3wAAAAJ&hl=en"
+                  target="_blank"
+                  >Google Scholar</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="assets/Images/professors/Suzan.jpg"
+                alt="tooth"
+              />
+              <div class="card-info">
+                <div class="card-text">
+                  <h3>Prof. Suzan Hattar (Collaborator)</h3>
+                  <h4>s.hattar@ju.edu.jo</h4>
+                  <p id="short-text">
+                    ​Graduated in 1996 from the School of Dentistry/University
+                    of Jordan. Worked as a teaching assistant for two years
+                    before continuing her post-graduate studies at the
+                    University of Paris VII, where she obtained her Master’s
+                    degree, Certificate and Diploma in Fixed
+                    Prosthodontics/Implantology and PhD in Oral Biology &
+                    Biomaterials in 2004. Her academic journey started in 2004
+                    as an assistant Professor in the School of Dentistry at the
+                    University of Jordan.
+                  </p>
+                  <p class="extra-text">
+                    In 2015, promoted to Associate Professor and was appointed
+                    Head of Department of Conservative dentistry (2016-2018).
+                    She became a Professor and Consultant in the year 2020 and
+                    worked Vice Dean for Graduate Affairs from 2021-2022. Prof
+                    Hattar teaches both undergraduate and post-graduate students
+                    at the School of Dentistry. She has been directing the
+                    Masters Program in Fixed & Removable prosthodontics for the
+                    last 4 years. Between the years 2017-2019, Prof Hattar
+                    conducted courses related to dental aesthetics (composite &
+                    Porcelain veneers) and participated with the team staff in
+                    GIDE (Group for Implant Dentistry Education) at the
+                    University of Jordan. She Published many articles in the
+                    field of tissue engineering, dental education as well as
+                    dental materials in well recognized journals. She was a jury
+                    member of the Jordanian Board of Conservative Dentistry
+                    between 2014-2021 and a member of Jordanian Prosthodontic
+                    Society. Her current clinical & research interests include
+                    adhesive, esthetic and Implant Dentistry.
+                  </p>
+                  <span class="see_more">See More</span>
+                </div>
+                <a
+                  href="https://scholar.google.com/citations?hl=en&user=iX4_O2sAAAAJ"
+                  target="_blank"
+                  >Google Scholar</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- === END GROUP MEMBERS === -->
     </main>
 
     <!-- === START FOOTER === -->
