--- a/products.html
+++ b/products.html
@@ -48,13 +48,13 @@
     <main>
       <!-- === START HERO SECTION === -->
       <section id="hero">
-        <div class="container">
+        <!-- <div class="container">
           <div class="overlay"></div>
           <div class="text">
             <h1>our products is here</h1>
             <span>AI for you, with you</span>
           </div>
-        </div>
+        </div> -->
         <video
           autoplay
           loop
