Added check if image is not standard

--- a/index.html
+++ b/index.html
@@ -427,5 +427,6 @@
     <!-- === END FOOTER === -->
 
     <script src="script.js"></script>
+    <script src="group-member.js"></script>
   </body>
 </html>
