--- a/products.html
+++ b/products.html
@@ -307,6 +307,7 @@
                 <label for="boneloss">Show Boneloss</label>
               </div>
               <canvas id="myCanvas"></canvas>
+              <p class="image_standard_error hidden">Image is not standard!</p>
               <!-- <canvas
                 id="myCanvas"
                 width="800"
