Remove title near names

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               />
               <div class="card-info">
                 <div class="card-text">
-                  <h3>Prof. Gheith Abandah (Co-PI)</h3>
+                  <h3>Prof. Gheith Abandah</h3>
                   <h4>abandah@ju.edu.jo</h4>
                   <p id="short-text">
                     ​Holds PhD and MSE degrees in Computer Science and
@@ -293,7 +293,7 @@
               />
               <div class="card-info">
                 <div class="card-text">
-                  <h3>Dr. Abeer Alhadidi (Co-PI)</h3>
+                  <h3>Dr. Abeer Alhadidi</h3>
                   <h4>a_hadidi@ju.edu.jo</h4>
                   <p id="short-text">
                     Dr. AlHadidi is currently a Clinical Associate Professor and
@@ -341,7 +341,7 @@
               />
               <div class="card-info">
                 <div class="card-text">
-                  <h3>Prof.Iyad Jafar (Collaborator)</h3>
+                  <h3>Prof.Iyad Jafar</h3>
                   <h4>iyad.jafar@ju.edu.jo</h4>
                   <p id="short-text">
                     ​Iyad Jafar received his Ph.D. degree in computer
@@ -374,7 +374,7 @@
               />
               <div class="card-info">
                 <div class="card-text">
-                  <h3>Prof. Suzan Hattar (Collaborator)</h3>
+                  <h3>Prof. Suzan Hattar</h3>
                   <h4>s.hattar@ju.edu.jo</h4>
                   <p id="short-text">
                     ​Graduated in 1996 from the School of Dentistry/University
